--- a/test/html/index.html
+++ b/test/html/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Test Grunt Workflow</title>
+    <title>f2e-workflow Test</title>
     <meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="mod-header">
-    <h1>Grunt Workflow Test</h1>
+    <a href="https://github.com/hzlzh/f2e-workflow"><h1>f2e-workflow Test</h1></a>
     <div class="mod-header__logo">Logo</div>
     <div class="mod-tips">Normal image still <span class="mod-tips__code">../<strong>img</strong>/<strong>bg</strong>-logo.png</span></div>
     <div class="mod-header__social-media">
