--- a/project/src/html/index.html
+++ b/project/src/html/index.html
@@ -24,5 +24,7 @@
     </div>
     <div class="tips">Icons images <span class="tips__code">../<strong>slice</strong>/<strong>icon</strong>-twitter.png</span> change to -> <span class="tips__code">../<strong>sprite</strong>/test.png</span></div>
 </div>
+
+<script src="../js/bundle.js"></script>
 </body>
 </html>
