增加多张雪碧图出口范例

--- a/project/src/html/doc.html
+++ b/project/src/html/doc.html
@@ -15,11 +15,11 @@
 <div class="mod-header">
     <div class="mod-header__logo">WeFlow Logo</div>
     <a class="mod-header__title" href="https://github.com/weixin/tmt-workflow">tmt-workflow Examples</a>
-    <div class="mod-header__desc">通过本范例了解工作流在开发、编译过程中所做的自动化处理</div>
+    <div class="mod-header__desc">以下为工作流在开发、编译过程中所做的自动化处理</div>
 </div>
 
 <div class="mod-example">
-    <div class="mod-example__title">雪碧图合并</div>
+    <div class="mod-example__title">雪碧图合并 (支持多组)</div>
     <div class="mod-example__preview">
         <div class="mod-discovery">
             <div class="mod-discovery__list">
@@ -33,6 +33,7 @@
             </div>
         </div>
     </div>
+
     <div class="mod-example__doc">
         <div class="mod-example__show">
             <div class="mod-example__before">
