--- a/project/src/html/index.html
+++ b/project/src/html/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="mod-example">
-    <div class="mod-example__title">雪碧图合并</div>
+    <div class="mod-example__title">雪碧图合并 (支持多组)</div>
     <div class="mod-example__preview">
         <div class="mod-discovery">
             <div class="mod-discovery__list">
@@ -33,6 +33,19 @@
             </div>
         </div>
     </div>
+
+    <div class="mod-example__preview">
+        <div class="mod-social-media">
+            <div class="mod-social-media__list">
+                <i class="mod-social-media__icon mod-social-media__icon_share"></i>
+                <i class="mod-social-media__icon mod-social-media__icon_moment"></i>
+                <i class="mod-social-media__icon mod-social-media__icon_favadd"></i>
+                <i class="mod-social-media__icon mod-social-media__icon_copy"></i>
+                <i class="mod-social-media__icon mod-social-media__icon_refresh"></i>
+            </div>
+        </div>
+    </div>
+    
 </div>
 
 <div class="mod-example">
