--- a/project-webpack/src/html/index.html
+++ b/project-webpack/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="zh-CN">
+<html lang="zh-CN" data-rem="375">
 <head>
     <meta charset="UTF-8">
     <title>tmt-workflow Demo</title>
@@ -82,9 +82,11 @@
 <!--音乐等媒体文件使用范例-->
 <audio src="../media/bgm.mp3" loop id="musicBGM"></audio>
 
+<!--以下为 js 代码压缩指令格式范例-->
+<!-- build:js ../js/build.js -->
 <script type="text/javascript" src="../js/lib/prism.js"></script>
 <script type="text/javascript" src="../js/index.js"></script>
-
+<!-- endbuild -->
 
 <script type="text/javascript" src="https://pingjs.qq.com/h5/stats.js" name="MTAH5" sid="500140624" ></script>
 </body>
