--- a/project/src/html/index.html
+++ b/project/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="zh-CN">
+<html lang="zh-CN" data-rem="375">
 <head>
     <meta charset="UTF-8">
     <title>tmt-workflow Demo</title>
