--- a/project/src/html/index.html
+++ b/project/src/html/index.html
@@ -73,6 +73,31 @@
     </div>
 </div>
 
+<div class="mod-example">
+    <div class="mod-example__title">普通图片调用</div>
+    <div class="mod-example__preview">
+        <div class="mod-sticker">
+            <div class="mod-sticker__list">
+                <p>作为背景图</p>
+                <div class="mod-social-media mod-svg__background-icon"></div>
+            </div>
+            <div class="mod-sticker__list">
+                <p>内联到HTML</p>
+                <img id="svg3" class="cas3" src="../img/svgicon/ts.svg?i" alt="">
+                <img id="svg3" class="cas3" src="../img/svgicon/ts.svg" alt="">
+            </div>
+            <div class="mod-sticker__list">
+                <p>合并SYMBOL</p>
+                <img id="svg2" class="cas2" src="../img/svgicon/4g.svg?s" alt="">
+                <img id="svg2" class="cas2" src="../img/svgicon/12w.svg?s" alt="">
+                <img id="svg2" class="cas2" src="../img/svgicon/bl.svg?s" alt="">
+                <img id="svg2" class="cas2" src="../img/svgicon/ss.svg?s" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="mod-footer">
     <!--以下为 EJS 模板语言使用范例-->
     <% var text = "点击查看更多源码说明" %>
