将svg目录单独提出来。

--- a/project/src/html/index.html
+++ b/project/src/html/index.html
@@ -90,20 +90,20 @@
         <div class="mod-sticker">
             <div class="mod-sticker__list-border">
                 <div>HTML直接引用</div>
-                <img src="../img/svgicon/ts.svg" alt="">
+                <img src="../svg/svgicon/ts.svg" alt="">
             </div>
             <div class="mod-sticker__list-border">
                 <div>内联到HTML 动画需求</div>
                 <div class="mod-header__desc">在src中链接的最后加?i</div>
-                <img id="svg4" class="cas3" src="../img/svgicon/translate.svg?i" alt="">
+                <img id="svg4" class="cas3" src="../svg/svgicon/translate.svg?i" alt="">
             </div>
             <div class="mod-sticker__list-border">
                 <div>合并SYMBOL   <button id="svgToggleColor" class="mod-example__svg-button">换色</button>需求</div>
                 <div class="mod-header__desc">在src中链接的最后加?s</div>
-                <img id="svg5" class="mod-example__svg-red" src="../img/svgicon/4g.svg?s" alt="">
-                <img id="svg6" class="mod-example__svg-red" src="../img/svgicon/12w.svg?s" alt="">
-                <img id="svg7" class="mod-example__svg-red" src="../img/svgicon/bl.svg?s" alt="">
-                <img id="svg8" class="mod-example__svg-red" src="../img/svgicon/ss.svg?s" alt="">
+                <img id="svg5" class="mod-example__svg-red" src="../svg/svgicon/4g.svg?s" alt="">
+                <img id="svg6" class="mod-example__svg-red" src="../svg/svgicon/12w.svg?s" alt="">
+                <img id="svg7" class="mod-example__svg-red" src="../svg/svgicon/bl.svg?s" alt="">
+                <img id="svg8" class="mod-example__svg-red" src="../svg/svgicon/ss.svg?s" alt="">
             </div>
         </div>
     </div>
