--- a/project-webpack/src/html/index.html
+++ b/project-webpack/src/html/index.html
@@ -73,6 +73,44 @@
     </div>
 </div>
 
+<div class="mod-example">
+    <div class="mod-example__title">SVG调用 - 作为背景图</div>
+    <div class="mod-example__preview">
+        <div class="mod-sticker">
+            <div class="mod-sticker__list">
+                <div class="mod-social-media mod-svg__background-icon"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="mod-example">
+    <div class="mod-example__title">SVG调用 - 在HTML使用</div>
+    <div class="mod-example__preview">
+        <div class="mod-sticker">
+            <div class="mod-sticker__list-border">
+                <div>HTML直接引用</div>
+                <img src="../svg/svgicon/ts.svg" alt="">
+            </div>
+            <div class="mod-sticker__list-border">
+                <div>内联到HTML 动画需求</div>
+                <div class="mod-header__desc">在src中链接的最后加?i</div>
+                <img id="svg4" class="cas3" src="../svg/svgicon/translate.svg?i" alt="">
+            </div>
+            <div class="mod-sticker__list-border">
+                <div>合并SYMBOL   <button id="svgToggleColor" class="mod-example__svg-button">换色</button>需求</div>
+                <div class="mod-header__desc">在src中链接的最后加?s</div>
+                <img id="svg5" class="mod-example__svg-red" src="../svg/svgicon/4g.svg?s" alt="">
+                <img id="svg6" class="mod-example__svg-red" src="../svg/svgicon/12w.svg?s" alt="">
+                <img id="svg7" class="mod-example__svg-red" src="../svg/svgicon/bl.svg?s" alt="">
+                <img id="svg8" class="mod-example__svg-red" src="../svg/svgicon/ss.svg?s" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="mod-footer">
     <!--以下为 EJS 模板语言使用范例-->
     <% var text = "点击查看更多源码说明" %>
@@ -83,8 +121,10 @@
 <audio src="../media/bgm.mp3" loop id="musicBGM"></audio>
 
 <!--以下为 js 代码压缩指令格式范例-->
+<!-- build:js ../js/build.js -->
 <script type="text/javascript" src="../js/lib/prism.js"></script>
 <script type="text/javascript" src="../js/index.js"></script>
+<!-- endbuild -->
 
 <script type="text/javascript" src="https://pingjs.qq.com/h5/stats.js" name="MTAH5" sid="500140624" ></script>
 </body>
